Fixed errors in treatment selection
- Fixed an error which caused some effects to be incorrectly inverted when combining multiple criteria with 'or'
- Added a filter to omit observations for which both treatments match the selected criteria from meta-analyses

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,13 +2,20 @@
 FROM rocker/shiny:3.6.3
 
 # Install Ubuntu packages
-RUN apt-get update && apt-get install -y \
-    libssl-dev libpng-dev libjpeg-dev libxml2-dev zlib1g-dev libgit2-dev
+RUN apt-get update --allow-releaseinfo-change && apt-get install -y \
+    libssl-dev libpng-dev libjpeg-dev libxml2-dev zlib1g-dev libgit2-dev cmake libcurl4-openssl-dev ca-certificates \
+    libharfbuzz-dev \
+    libfribidi-dev \
+    libfreetype6-dev \
+    libpng-dev \
+    libtiff5-dev \
+    libjpeg-dev
 
 # Install R packages
 COPY app/loadLibraries.R /tmp/
 RUN R -f /tmp/loadLibraries.R
-
+# make this dir fully writable. rshiny app needs it to install deps (that being said, in a refactory, we should definitely remove this line, as it's a bad practice)
+RUN chmod 777 /usr/local/lib/R/site-library 
 # Add the app
 #COPY ./app /srv/shiny-server/app
 #COPY ./original-app /srv/shiny-server/original
